--- a/minutiae/intro.tex
+++ b/minutiae/intro.tex
@@ -165,7 +165,7 @@ Piotr Banaszkiewicz \\
 Preston Holmes \\
 Pulkit Sethi \\
 Rail Aliiev \\
-Ronin Narkis \\
+Ronen Narkis \\
 Rose Ames \\
 Sina Jahan \\
 Stefan Turalski \\
