Fix broken refs.

--- a/tex/same-origin-policy.tex
+++ b/tex/same-origin-policy.tex
@@ -835,7 +835,7 @@ This counterexample involves two steps. In the first step
 \texttt{EvilScript}, executing inside \texttt{AdBanner} from
 \texttt{EvilDomain}, reads the content of \texttt{InboxPage}, which
 originates from \texttt{EmailDomain}. In the next step
-(\aosafigref{500l.same-origin-policy-fig-attack-1b}),
+(\aosafigref{500l.same-origin-policy.fig-attack-1b}),
 \texttt{EvilScript} sends the same content (\texttt{MyInboxInfo}) to
 \texttt{EvilServer} by making an \texttt{XmlHtttpRequest} call. The core
 of the problem here is that a script executing under one domain is able
